# jira-assistant

./: .env.example  .gitignore  README  mcp.example.json  pyproject.toml  test_api.py
jira_assistant/: __init__.py  config.py  server.py
jira_assistant/tools/: __init__.py  add_ticket_comment.py  create_new_epic.py  create_new_ticket.py  create_new_ticket_advanced.py  get_assigned_tickets.py  get_available_epics.py  get_available_tickets.py  get_epic_tickets.py  get_ticket_details.py  list_sprints.py  search_similar_tickets.py  transition_ticket.py  update_config.py  update_ticket_details.py
